--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "prisma generate && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "prisma": "prisma",
+    "prisma:type": "prisma generate",
+    "migrate:dev": "prisma migrate dev",
+    "studio": "prisma studio",
+    "pretest:e2e": "npm run test:cpe && npm run test:install-pe",
+    "test:cpe": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-pe": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir test/mfc",
+    "test:watch": "vitest --dir test/mfc",
+    "test:cov": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "lint:fix": "eslint src test --ext .ts --fix",
+    "check:type": "tsc --noEmit"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -35,6 +43,7 @@
     "zod-validation-error": "^3.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
