--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   nest_app:
     build: ./
-    container_name: nest_app
+    container_name: mfc_app
     ports:
       - '3333:3333'
     volumes:
