--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@vitest/coverage-v8": "^1.5.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.42.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "prisma": "^5.12.1",
