--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "prisma:type": "prisma generate",
     "migrate:dev": "prisma migrate dev",
     "studio": "prisma studio",
-    "pretest:e2e": "npm run test:cpe && npm run test:install-pe",
-    "test:cpe": "npm link ./prisma/vitest-environment-prisma",
-    "test:install-pe": "npm link vitest-environment-prisma",
     "test": "vitest run --dir test/mfc",
     "test:watch": "vitest --dir test/mfc",
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "lint:fix": "eslint src test --ext .ts --fix",
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
+    "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts",
     "check:type": "tsc --noEmit"
   },
   "dependencies": {
